// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UnifiedAssetCard Snapshot Tests for Visual Consistency matches snapshot for error state 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "backgroundColor": "#1f1f1f",
      "borderRadius": 16,
      "elevation": 12,
      "marginBottom": 20,
      "marginHorizontal": 20,
      "opacity": 1,
      "padding": 20,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 8,
        "width": 0,
      },
      "shadowOpacity": 0.4,
      "shadowRadius": 12,
    }
  }
  testID="unified-asset-card"
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginBottom": 20,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#374151",
            "borderRadius": 8,
            "height": 40,
            "justifyContent": "center",
            "marginRight": 16,
            "width": 40,
          }
        }
      >
        <Text
          style={
            {
              "color": "#ffffff",
              "fontSize": 14,
              "fontWeight": "800",
            }
          }
        >
          UA
        </Text>
      </View>
      <View
        style={
          {
            "flex": 1,
          }
        }
      >
        <Text
          numberOfLines={1}
          style={
            {
              "color": "#ffffff",
              "fontSize": 17,
              "fontWeight": "600",
              "lineHeight": 20,
              "marginBottom": 4,
            }
          }
        >
          Unknown Asset
        </Text>
        <Text
          style={
            {
              "color": "#9ca3af",
              "fontSize": 13,
              "fontWeight": "500",
              "letterSpacing": 0.2,
            }
          }
        >
          UA
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "flex-end",
        }
      }
    >
      <Text
        style={
          {
            "color": "#ffffff",
            "fontSize": 20,
            "fontWeight": "700",
            "letterSpacing": -0.2,
            "marginBottom": 2,
          }
        }
      >
        ₹0.00
      </Text>
      <Text
        style={
          [
            {
              "fontSize": 14,
              "fontWeight": "600",
              "letterSpacing": 0.1,
            },
            {
              "color": "#6B7280",
            },
          ]
        }
      >
        ↑ 0.00%
      </Text>
    </View>
  </View>
  <View
    style={
      {
        "flexDirection": "row",
        "marginBottom": 24,
        "marginTop": 4,
      }
    }
  >
    <View
      style={
        {
          "flex": 1,
          "flexDirection": "row",
          "marginRight": 24,
        }
      }
    >
      <View
        style={
          {
            "height": 80,
            "justifyContent": "space-between",
            "paddingBottom": 4,
            "paddingRight": 10,
            "paddingTop": 4,
            "width": 44,
          }
        }
      >
        <Text
          style={
            {
              "color": "#6b7280",
              "fontSize": 11,
              "fontWeight": "500",
              "textAlign": "right",
            }
          }
        >
          100
        </Text>
        <Text
          style={
            {
              "color": "#6b7280",
              "fontSize": 11,
              "fontWeight": "500",
              "textAlign": "right",
            }
          }
        >
          100
        </Text>
        <Text
          style={
            {
              "color": "#6b7280",
              "fontSize": 11,
              "fontWeight": "500",
              "textAlign": "right",
            }
          }
        >
          100
        </Text>
      </View>
      <View
        style={
          {
            "flex": 1,
          }
        }
      >
        <View
          style={
            {
              "height": 80,
              "position": "relative",
            }
          }
        >
          <RNSVGSvgView
            height={80}
            width={140}
          >
            <RNSVGLine
              stroke="#6B7280"
              strokeWidth="2"
              x1={0}
              x2={12.727272727272728}
              y1={80}
              y2={80}
            />
            <RNSVGLine
              stroke="#6B7280"
              strokeWidth="2"
              x1={12.727272727272728}
              x2={25.454545454545457}
              y1={80}
              y2={80}
            />
            <RNSVGLine
              stroke="#6B7280"
              strokeWidth="2"
              x1={25.454545454545457}
              x2={38.18181818181818}
              y1={80}
              y2={80}
            />
            <RNSVGLine
              stroke="#6B7280"
              strokeWidth="2"
              x1={38.18181818181818}
              x2={50.909090909090914}
              y1={80}
              y2={80}
            />
            <RNSVGLine
              stroke="#6B7280"
              strokeWidth="2"
              x1={50.909090909090914}
              x2={63.63636363636363}
              y1={80}
              y2={80}
            />
            <RNSVGLine
              stroke="#6B7280"
              strokeWidth="2"
              x1={63.63636363636363}
              x2={76.36363636363636}
              y1={80}
              y2={80}
            />
            <RNSVGLine
              stroke="#6B7280"
              strokeWidth="2"
              x1={76.36363636363636}
              x2={89.0909090909091}
              y1={80}
              y2={80}
            />
            <RNSVGLine
              stroke="#6B7280"
              strokeWidth="2"
              x1={89.0909090909091}
              x2={101.81818181818183}
              y1={80}
              y2={80}
            />
            <RNSVGLine
              stroke="#6B7280"
              strokeWidth="2"
              x1={101.81818181818183}
              x2={114.54545454545455}
              y1={80}
              y2={80}
            />
            <RNSVGLine
              stroke="#6B7280"
              strokeWidth="2"
              x1={114.54545454545455}
              x2={127.27272727272727}
              y1={80}
              y2={80}
            />
            <RNSVGLine
              stroke="#6B7280"
              strokeWidth="2"
              x1={127.27272727272727}
              x2={140}
              y1={80}
              y2={80}
            />
          </RNSVGSvgView>
        </View>
        <Text
          style={
            {
              "color": "#6b7280",
              "fontSize": 11,
              "fontWeight": "500",
              "marginTop": 10,
              "textAlign": "left",
            }
          }
        >
          12:00 PM
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "justifyContent": "space-between",
          "paddingTop": 4,
          "width": 130,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginBottom": 12,
          }
        }
      >
        <Text
          style={
            {
              "color": "#6b7280",
              "fontSize": 12,
              "fontWeight": "500",
            }
          }
        >
          Volume
        </Text>
        <Text
          style={
            [
              {
                "color": "#ffffff",
                "fontSize": 13,
                "fontWeight": "600",
                "textAlign": "right",
              },
              null,
            ]
          }
        >
          N/A
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginBottom": 12,
          }
        }
      >
        <Text
          style={
            {
              "color": "#6b7280",
              "fontSize": 12,
              "fontWeight": "500",
            }
          }
        >
          Market Cap
        </Text>
        <Text
          style={
            [
              {
                "color": "#ffffff",
                "fontSize": 13,
                "fontWeight": "600",
                "textAlign": "right",
              },
              null,
            ]
          }
        >
          N/A
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginBottom": 12,
          }
        }
      >
        <Text
          style={
            {
              "color": "#6b7280",
              "fontSize": 12,
              "fontWeight": "500",
            }
          }
        >
          P/E Ratio
        </Text>
        <Text
          style={
            [
              {
                "color": "#ffffff",
                "fontSize": 13,
                "fontWeight": "600",
                "textAlign": "right",
              },
              null,
            ]
          }
        >
          N/A
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginBottom": 12,
          }
        }
      >
        <Text
          style={
            {
              "color": "#6b7280",
              "fontSize": 12,
              "fontWeight": "500",
            }
          }
        >
          Growth Rate
        </Text>
        <Text
          style={
            [
              {
                "color": "#ffffff",
                "fontSize": 13,
                "fontWeight": "600",
                "textAlign": "right",
              },
              null,
            ]
          }
        >
          N/A
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      {
        "borderTopColor": "#333333",
        "borderTopWidth": 1,
        "marginTop": 4,
        "paddingTop": 20,
      }
    }
  >
    <Text
      style={
        {
          "color": "#d1d5db",
          "fontSize": 14,
          "fontWeight": "400",
          "letterSpacing": 0.1,
          "lineHeight": 20,
        }
      }
    >
      Asset data is currently unavailable. Please check your connection and try again.
    </Text>
  </View>
</View>
`;

exports[`UnifiedAssetCard Snapshot Tests for Visual Consistency matches snapshot for physical asset 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "backgroundColor": "#1f1f1f",
      "borderRadius": 16,
      "elevation": 12,
      "marginBottom": 20,
      "marginHorizontal": 20,
      "opacity": 1,
      "padding": 20,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 8,
        "width": 0,
      },
      "shadowOpacity": 0.4,
      "shadowRadius": 12,
    }
  }
  testID="unified-asset-card"
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginBottom": 20,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#374151",
            "borderRadius": 8,
            "height": 40,
            "justifyContent": "center",
            "marginRight": 16,
            "width": 40,
          }
        }
      >
        <Text
          style={
            {
              "color": "#ffffff",
              "fontSize": 14,
              "fontWeight": "800",
            }
          }
        >
          GI
        </Text>
      </View>
      <View
        style={
          {
            "flex": 1,
          }
        }
      >
        <Text
          numberOfLines={1}
          style={
            {
              "color": "#ffffff",
              "fontSize": 17,
              "fontWeight": "600",
              "lineHeight": 20,
              "marginBottom": 4,
            }
          }
        >
          Gold Investment
        </Text>
        <Text
          style={
            {
              "color": "#9ca3af",
              "fontSize": 13,
              "fontWeight": "500",
              "letterSpacing": 0.2,
            }
          }
        >
          GI
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "flex-end",
        }
      }
    >
      <Text
        style={
          {
            "color": "#ffffff",
            "fontSize": 20,
            "fontWeight": "700",
            "letterSpacing": -0.2,
            "marginBottom": 2,
          }
        }
      >
        ₹5500.00
      </Text>
      <Text
        style={
          [
            {
              "fontSize": 14,
              "fontWeight": "600",
              "letterSpacing": 0.1,
            },
            {
              "color": "#22c55e",
            },
          ]
        }
      >
        ↑ 10.00%
      </Text>
    </View>
  </View>
  <View
    style={
      {
        "flexDirection": "row",
        "marginBottom": 24,
        "marginTop": 4,
      }
    }
  >
    <View
      style={
        {
          "flex": 1,
          "flexDirection": "row",
          "marginRight": 24,
        }
      }
    >
      <View
        style={
          {
            "height": 80,
            "justifyContent": "space-between",
            "paddingBottom": 4,
            "paddingRight": 10,
            "paddingTop": 4,
            "width": 44,
          }
        }
      >
        <Text
          style={
            {
              "color": "#6b7280",
              "fontSize": 11,
              "fontWeight": "500",
              "textAlign": "right",
            }
          }
        >
          5500
        </Text>
        <Text
          style={
            {
              "color": "#6b7280",
              "fontSize": 11,
              "fontWeight": "500",
              "textAlign": "right",
            }
          }
        >
          5211
        </Text>
        <Text
          style={
            {
              "color": "#6b7280",
              "fontSize": 11,
              "fontWeight": "500",
              "textAlign": "right",
            }
          }
        >
          4923
        </Text>
      </View>
      <View
        style={
          {
            "flex": 1,
          }
        }
      >
        <View
          style={
            {
              "height": 80,
              "position": "relative",
            }
          }
        >
          <RNSVGSvgView
            height={80}
            width={140}
          >
            <RNSVGLine
              stroke="#22c55e"
              strokeWidth="2"
              x1={0}
              x2={12.727272727272728}
              y1={80}
              y2={74.98443066416793}
            />
            <RNSVGLine
              stroke="#22c55e"
              strokeWidth="2"
              x1={12.727272727272728}
              x2={25.454545454545457}
              y1={74.98443066416793}
              y2={71.58971711788911}
            />
            <RNSVGLine
              stroke="#22c55e"
              strokeWidth="2"
              x1={25.454545454545457}
              x2={38.18181818181818}
              y1={71.58971711788911}
              y2={68.02412809309796}
            />
            <RNSVGLine
              stroke="#22c55e"
              strokeWidth="2"
              x1={38.18181818181818}
              x2={50.909090909090914}
              y1={68.02412809309796}
              y2={63.728198277310455}
            />
            <RNSVGLine
              stroke="#22c55e"
              strokeWidth="2"
              x1={50.909090909090914}
              x2={63.63636363636363}
              y1={63.728198277310455}
              y2={60.67145437787343}
            />
            <RNSVGLine
              stroke="#22c55e"
              strokeWidth="2"
              x1={63.63636363636363}
              x2={76.36363636363636}
              y1={60.67145437787343}
              y2={55.91544317618997}
            />
            <RNSVGLine
              stroke="#22c55e"
              strokeWidth="2"
              x1={76.36363636363636}
              x2={89.0909090909091}
              y1={55.91544317618997}
              y2={51.90481184249909}
            />
            <RNSVGLine
              stroke="#22c55e"
              strokeWidth="2"
              x1={89.0909090909091}
              x2={101.81818181818183}
              y1={51.90481184249909}
              y2={47.39704197719018}
            />
            <RNSVGLine
              stroke="#22c55e"
              strokeWidth="2"
              x1={101.81818181818183}
              x2={114.54545454545455}
              y1={47.39704197719018}
              y2={44.032526875757895}
            />
            <RNSVGLine
              stroke="#22c55e"
              strokeWidth="2"
              x1={114.54545454545455}
              x2={127.27272727272727}
              y1={44.032526875757895}
              y2={38.17173333564124}
            />
            <RNSVGLine
              stroke="#22c55e"
              strokeWidth="2"
              x1={127.27272727272727}
              x2={140}
              y1={38.17173333564124}
              y2={0}
            />
          </RNSVGSvgView>
        </View>
        <Text
          style={
            {
              "color": "#6b7280",
              "fontSize": 11,
              "fontWeight": "500",
              "marginTop": 10,
              "textAlign": "left",
            }
          }
        >
          3:52 PM
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "justifyContent": "space-between",
          "paddingTop": 4,
          "width": 130,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginBottom": 12,
          }
        }
      >
        <Text
          style={
            {
              "color": "#6b7280",
              "fontSize": 12,
              "fontWeight": "500",
            }
          }
        >
          Volume
        </Text>
        <Text
          style={
            [
              {
                "color": "#ffffff",
                "fontSize": 13,
                "fontWeight": "600",
                "textAlign": "right",
              },
              null,
            ]
          }
        >
          536.00K
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginBottom": 12,
          }
        }
      >
        <Text
          style={
            {
              "color": "#6b7280",
              "fontSize": 12,
              "fontWeight": "500",
            }
          }
        >
          Market Cap
        </Text>
        <Text
          style={
            [
              {
                "color": "#ffffff",
                "fontSize": 13,
                "fontWeight": "600",
                "textAlign": "right",
              },
              null,
            ]
          }
        >
          1.7M
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginBottom": 12,
          }
        }
      >
        <Text
          style={
            {
              "color": "#6b7280",
              "fontSize": 12,
              "fontWeight": "500",
            }
          }
        >
          Purchase Price
        </Text>
        <Text
          style={
            [
              {
                "color": "#ffffff",
                "fontSize": 13,
                "fontWeight": "600",
                "textAlign": "right",
              },
              null,
            ]
          }
        >
          ₹5,000.00
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginBottom": 12,
          }
        }
      >
        <Text
          style={
            {
              "color": "#6b7280",
              "fontSize": 12,
              "fontWeight": "500",
            }
          }
        >
          Quantity
        </Text>
        <Text
          style={
            [
              {
                "color": "#ffffff",
                "fontSize": 13,
                "fontWeight": "600",
                "textAlign": "right",
              },
              null,
            ]
          }
        >
          10 grams
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      {
        "borderTopColor": "#333333",
        "borderTopWidth": 1,
        "marginTop": 4,
        "paddingTop": 20,
      }
    }
  >
    <Text
      style={
        {
          "color": "#d1d5db",
          "fontSize": 14,
          "fontWeight": "400",
          "letterSpacing": 0.1,
          "lineHeight": 20,
        }
      }
    >
      Gold showing steady appreciation
    </Text>
  </View>
</View>
`;

exports[`UnifiedAssetCard Snapshot Tests for Visual Consistency matches snapshot for tradable asset 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "backgroundColor": "#1f1f1f",
      "borderRadius": 16,
      "elevation": 12,
      "marginBottom": 20,
      "marginHorizontal": 20,
      "opacity": 1,
      "padding": 20,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 8,
        "width": 0,
      },
      "shadowOpacity": 0.4,
      "shadowRadius": 12,
    }
  }
  testID="unified-asset-card"
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginBottom": 20,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#374151",
            "borderRadius": 8,
            "height": 40,
            "justifyContent": "center",
            "marginRight": 16,
            "width": 40,
          }
        }
      >
        <Text
          style={
            {
              "color": "#ffffff",
              "fontSize": 14,
              "fontWeight": "800",
            }
          }
        >
          AAPL
        </Text>
      </View>
      <View
        style={
          {
            "flex": 1,
          }
        }
      >
        <Text
          numberOfLines={1}
          style={
            {
              "color": "#ffffff",
              "fontSize": 17,
              "fontWeight": "600",
              "lineHeight": 20,
              "marginBottom": 4,
            }
          }
        >
          Apple Inc.
        </Text>
        <Text
          style={
            {
              "color": "#9ca3af",
              "fontSize": 13,
              "fontWeight": "500",
              "letterSpacing": 0.2,
            }
          }
        >
          AAPL
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "flex-end",
        }
      }
    >
      <Text
        style={
          {
            "color": "#ffffff",
            "fontSize": 20,
            "fontWeight": "700",
            "letterSpacing": -0.2,
            "marginBottom": 2,
          }
        }
      >
        $175.00
      </Text>
      <Text
        style={
          [
            {
              "fontSize": 14,
              "fontWeight": "600",
              "letterSpacing": 0.1,
            },
            {
              "color": "#22c55e",
            },
          ]
        }
      >
        ↑ 16.67%
      </Text>
    </View>
  </View>
  <View
    style={
      {
        "flexDirection": "row",
        "marginBottom": 24,
        "marginTop": 4,
      }
    }
  >
    <View
      style={
        {
          "flex": 1,
          "flexDirection": "row",
          "marginRight": 24,
        }
      }
    >
      <View
        style={
          {
            "height": 80,
            "justifyContent": "space-between",
            "paddingBottom": 4,
            "paddingRight": 10,
            "paddingTop": 4,
            "width": 44,
          }
        }
      >
        <Text
          style={
            {
              "color": "#6b7280",
              "fontSize": 11,
              "fontWeight": "500",
              "textAlign": "right",
            }
          }
        >
          175
        </Text>
        <Text
          style={
            {
              "color": "#6b7280",
              "fontSize": 11,
              "fontWeight": "500",
              "textAlign": "right",
            }
          }
        >
          166
        </Text>
        <Text
          style={
            {
              "color": "#6b7280",
              "fontSize": 11,
              "fontWeight": "500",
              "textAlign": "right",
            }
          }
        >
          157
        </Text>
      </View>
      <View
        style={
          {
            "flex": 1,
          }
        }
      >
        <View
          style={
            {
              "height": 80,
              "position": "relative",
            }
          }
        >
          <RNSVGSvgView
            height={80}
            width={140}
          >
            <RNSVGLine
              stroke="#22c55e"
              strokeWidth="2"
              x1={0}
              x2={12.727272727272728}
              y1={80}
              y2={75.12424012870112}
            />
            <RNSVGLine
              stroke="#22c55e"
              strokeWidth="2"
              x1={12.727272727272728}
              x2={25.454545454545457}
              y1={75.12424012870112}
              y2={69.36357121576529}
            />
            <RNSVGLine
              stroke="#22c55e"
              strokeWidth="2"
              x1={25.454545454545457}
              x2={38.18181818181818}
              y1={69.36357121576529}
              y2={63.53366436079087}
            />
            <RNSVGLine
              stroke="#22c55e"
              strokeWidth="2"
              x1={38.18181818181818}
              x2={50.909090909090914}
              y1={63.53366436079087}
              y2={57.60732326492265}
            />
            <RNSVGLine
              stroke="#22c55e"
              strokeWidth="2"
              x1={50.909090909090914}
              x2={63.63636363636363}
              y1={57.60732326492265}
              y2={53.24570360221818}
            />
            <RNSVGLine
              stroke="#22c55e"
              strokeWidth="2"
              x1={63.63636363636363}
              x2={76.36363636363636}
              y1={53.24570360221818}
              y2={49.90523840970486}
            />
            <RNSVGLine
              stroke="#22c55e"
              strokeWidth="2"
              x1={76.36363636363636}
              x2={89.0909090909091}
              y1={49.90523840970486}
              y2={46.78833557700483}
            />
            <RNSVGLine
              stroke="#22c55e"
              strokeWidth="2"
              x1={89.0909090909091}
              x2={101.81818181818183}
              y1={46.78833557700483}
              y2={41.40317436864898}
            />
            <RNSVGLine
              stroke="#22c55e"
              strokeWidth="2"
              x1={101.81818181818183}
              x2={114.54545454545455}
              y1={41.40317436864898}
              y2={37.326361408836334}
            />
            <RNSVGLine
              stroke="#22c55e"
              strokeWidth="2"
              x1={114.54545454545455}
              x2={127.27272727272727}
              y1={37.326361408836334}
              y2={32.95100573701867}
            />
            <RNSVGLine
              stroke="#22c55e"
              strokeWidth="2"
              x1={127.27272727272727}
              x2={140}
              y1={32.95100573701867}
              y2={0}
            />
          </RNSVGSvgView>
        </View>
        <Text
          style={
            {
              "color": "#6b7280",
              "fontSize": 11,
              "fontWeight": "500",
              "marginTop": 10,
              "textAlign": "left",
            }
          }
        >
          3:52 PM
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "justifyContent": "space-between",
          "paddingTop": 4,
          "width": 130,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginBottom": 12,
          }
        }
      >
        <Text
          style={
            {
              "color": "#6b7280",
              "fontSize": 12,
              "fontWeight": "500",
            }
          }
        >
          Volume
        </Text>
        <Text
          style={
            [
              {
                "color": "#ffffff",
                "fontSize": 13,
                "fontWeight": "600",
                "textAlign": "right",
              },
              null,
            ]
          }
        >
          45.2M
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginBottom": 12,
          }
        }
      >
        <Text
          style={
            {
              "color": "#6b7280",
              "fontSize": 12,
              "fontWeight": "500",
            }
          }
        >
          Market Cap
        </Text>
        <Text
          style={
            [
              {
                "color": "#ffffff",
                "fontSize": 13,
                "fontWeight": "600",
                "textAlign": "right",
              },
              null,
            ]
          }
        >
          2.9T
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginBottom": 12,
          }
        }
      >
        <Text
          style={
            {
              "color": "#6b7280",
              "fontSize": 12,
              "fontWeight": "500",
            }
          }
        >
          P/E Ratio
        </Text>
        <Text
          style={
            [
              {
                "color": "#ffffff",
                "fontSize": 13,
                "fontWeight": "600",
                "textAlign": "right",
              },
              null,
            ]
          }
        >
          28.45
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginBottom": 12,
          }
        }
      >
        <Text
          style={
            {
              "color": "#6b7280",
              "fontSize": 12,
              "fontWeight": "500",
            }
          }
        >
          Dividend Yield
        </Text>
        <Text
          style={
            [
              {
                "color": "#ffffff",
                "fontSize": 13,
                "fontWeight": "600",
                "textAlign": "right",
              },
              null,
            ]
          }
        >
          2.55%
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      {
        "borderTopColor": "#333333",
        "borderTopWidth": 1,
        "marginTop": 4,
        "paddingTop": 20,
      }
    }
  >
    <Text
      style={
        {
          "color": "#d1d5db",
          "fontSize": 14,
          "fontWeight": "400",
          "letterSpacing": 0.1,
          "lineHeight": 20,
        }
      }
    >
      Apple stock showing strong performance
    </Text>
  </View>
</View>
`;
